# internship-deliverables

BikeSharing/: BikeSharing.ipynb  Readme.md  pyproject.toml
misc/: 20news_model_mult.vw  20news_test.vw  20news_test_predictions_mult.txt  gradient_descent.py  news_model.vw  news_test_predictions.txt  pyproject.toml  vowpalwabbit.ipynb
mlcourse/: pyproject.toml  topic_1_assignment.ipynb  topic_2_assignment.ipynb  topic_4_assignment.ipynb  topic_5_assignment.ipynb  topic_6_assignment.ipynb  topic_7_assignment.ipynb  topic_8_assignment.ipynb  topic_9_assignment.ipynb
mlcourse.ai/: topic_3_assignment.ipynb
mlcourse/.ipynb_checkpoints/: topic_4_assignment-checkpoint.ipynb
vowpaltest/: something.ipynb
