[project]
name = "bikesharing"
version = "0.1.0"
description = ""
authors = [
    {name = "Baha Celik",email = "bahacelik.acn@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "bikesharing", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
