[project]
name = "mlcourse"
version = "0.1.0"
description = ""
authors = [
    {name = "p3rc1va1",email = "35celik.baha@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10, <4"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "pmdarima (>=2.0.4,<3.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "xgboost (>=3.0.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "mlcourse", from = "src"}]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
